--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-fontawesome": "^1.7.1",
+    "react-katex": "^2.0.2",
+    "react-markdown": "^5.0.2",
     "react-scripts": "4.0.0",
+    "react-syntax-highlighter": "^15.3.0",
+    "remark-math": "^4.0.0",
     "remarkable": "^2.0.1",
-    "remarkable-katex": "^1.1.6",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
